// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Horizontal Spinner matches snapshot 1`] = `
<LoadingSpinnerWrap
  orientation="horizontal"
>
  <LoadingSpinner
    orientation="horizontal"
  />
  <LoadingMessage>
    Loading...
  </LoadingMessage>
</LoadingSpinnerWrap>
`;

exports[`Vertical Spinner matches snapshot 1`] = `
<LoadingSpinnerWrap
  orientation="vertical"
>
  <LoadingSpinner
    orientation="vertical"
  />
  <LoadingMessage>
    Loading...
  </LoadingMessage>
</LoadingSpinnerWrap>
`;
